--- a/conda.yaml
+++ b/conda.yaml
@@ -8,7 +8,7 @@ dependencies:
   # Installation will be faster and more efficient.
   # https://anaconda.org/search
   - python=3.7.5
-
+  - beautifulsoup4=4.9.3
   - pip=20.1
   - pip:
       # Define pip packages here.
