--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ testrun/*
 .~lock*
 *.pkl
 certificationtasks.robot
+Smartphone S.jpg
+Smart TV.jpg
+Cadeira de praia.jpg
+Aspirador de pó.jpg
+Ar condicionado.jpg
